feat: minimal working case

--- a/src/views/dynamic/index.less
+++ b/src/views/dynamic/index.less
@@ -19,6 +19,12 @@
     height: 2px;
     background: #178df7;
   }
+
+  .comp-container {
+    box-shadow: rgba(31, 193, 27, .2) 0px 2px 8px 0px !important;
+    padding: 50px 0;
+  }
+
   .dynamic-comp-root {
     user-select: none;
     padding: 10px 0;
